# llm-learning-hub

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
01-foundations/01-mathematics-for-ml/: README.md
01-foundations/02-deep-learning-basics/: README.md
01-foundations/03-transformers/: 01-attention-from-scratch.ipynb  02-transformer-from-scratch.ipynb  README.md
02-llm-science/01-tokenization/: 01-bpe-from-scratch.ipynb  02-tokenizer-comparison.ipynb  README.md
02-llm-science/02-pretraining/: 01-data-pipeline.ipynb  02-small-gpt-pretraining.ipynb  README.md
02-llm-science/03-fine-tuning/: 01-lora-finetuning.ipynb  02-qlora-4bit.ipynb  03-chat-template-formatting.ipynb  README.md
02-llm-science/04-alignment/: 01-dpo-training.ipynb  02-grpo-reasoning.ipynb  README.md
02-llm-science/05-evaluation/: 01-benchmark-evaluation.ipynb  02-llm-as-judge.ipynb  README.md
03-llm-engineering/01-rag-systems/: 01-basic-rag.ipynb  02-advanced-rag.ipynb  03-agentic-rag.ipynb  README.md
03-llm-engineering/02-agents/: 01-react-agent.ipynb  02-multi-agent-system.ipynb  03-tool-use.ipynb  README.md
03-llm-engineering/03-prompt-engineering/: 01-prompt-patterns.ipynb  (+3 more)
05-resources/: courses.md  papers.md  roadmap.md  tools.md
docs/: CHANGELOG.md  FAQ.md
scripts/: download-datasets.sh  setup.sh
(+15 files in other folders)
